--- a/app/templates/songs_rating.html
+++ b/app/templates/songs_rating.html
@@ -1,15 +1,16 @@
-{% for song in activity %}
-    <div>{{ song.artist }}</div>
-    <div>{{ song.title }}</div>
-    <div>{{ song.difficulty }}</div>
-    <div>{{ song.level }}</div>
-    <div>{{ song.released }}</div>
-{% endfor %}
-
----
-
 <h3>
     <div>Average rating : <b>{{ average_rating }}</b></div>
     <div>Lowest rating : <b>{{ lowest_rating }}</b></div>
     <div>Highest rating : <b>{{ highest_rating }}</b></div>
 </h3>
+
+---
+
+{% for song in activity %}
+    <div>artist: {{ song.artist }}</div>
+    <div>title: {{ song.title }}</div>
+    <div>difficulty: {{ song.difficulty }}</div>
+    <div>level: {{ song.level }}</div>
+    <div>released: {{ song.released }}</div>
+    <br>
+{% endfor %}
